# kc3

./: .gdb_history  .gitignore  .gitmodules  .gitmodules_push  .ic3_history  .ikc3_history  AUTHORS.md  BUGS  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ChangeLog.md  Dockerfile  INSTALL.md  LICENSE.md  Makefile  README.md  SHARDING.md  STONE.md  STRUCTURE.md  TESTING.md  TODO.md  TUTORIAL.md  USAGE.md  c3.index  config.subr  config_common  configure  configure-android  crt.c  dist_macos  env  env_clang64  env_msys2_clang64  fact.md  facts_test_dump.facts  ffi.h  gothacked.txt  kc3.index  kc3.version  (+6 more)
.cpkg/: c3.sysdef.lisp
android/egl/demo/app/src/main/jni/: CMakeLists.txt
c3c/: Makefile  c3c.c  configure
c3s/: Makefile  buf_readline.c  buf_readline.h  c3s.c  configure  sources.mk  sources.sh  update_sources
debian/: changelog  control  rules
doc/: index.en.md  index.fr.md
docs/: kc3cat.c
ekc3/: Makefile  configure  ekc3.c  ekc3.h  embed.c  embed.h  embed.lisp  html.c  html.h  sources.mk  sources.sh  types.h
epoll/: Makefile  configure  epoll.c  epoll.h  sources.mk  sources.sh  update_sources
event/: Makefile  configure  event.c  event.h  sources.mk  sources.sh
event_poll/: Makefile  configure  event_poll.c  event_poll.h  sources.mk  sources.sh
fs/: Makefile  configure  update_sources
git/: Makefile  blob.c  blob.h  branch.c  branch.h  configure  files.c  files.h  git.h  kc3_git.h  log.c  log.h  reference.c  reference.h  repository.c  repository.h  sources.mk  sources.sh  tag.c  tag.h  update_sources
gl/: Makefile  configure  dmat3.h  dmat4.c  dmat4.h  dvec2.c  dvec2.h  dvec3.c  dvec3.h  egl.pc  freetype2.h  gl.h  gl_box.c  gl_box.h  gl_camera.c  gl_camera.h  gl_cylinder.c  gl_cylinder.h  gl_deprecated.c  gl_deprecated.h  gl_font.c  gl_font.h  gl_lines.c  gl_lines.h  gl_object.c  gl_object.h  gl_ortho.c  gl_ortho.h  gl_sphere.c  gl_sphere.h  gl_sprite.c  gl_sprite.h  gl_square.c  gl_square.h  gl_text.c  gl_text.h  gl_triangle.c  gl_triangle.h  gl_vertex.c  gl_vertex.h  (+18 more)
gtk4/: Makefile  action_map.c  action_map.h  application.c  application.h  application_window.c  application_window.h  box.c  box.h  button.c  button.h  configure  entry.c  entry.h  entry_buffer.c  entry_buffer.h  file.c  file.h  frame.c  frame.h  gsk_gl_renderer.c  gsk_gl_renderer.h  gsk_renderer.c  gsk_renderer.h  kc3_glib.c  kc3_glib.h  kc3_gtk4.h  label.c  label.h  list_box.c  list_box.h  menu.c  menu.h  menu_item.c  menu_item.h  object.c  object.h  paned.c  paned.h  scrolled_window.c  (+16 more)
http/: Makefile  configure  http.c  http.h  http_event.c  http_event.h  http_request.c  http_request.h  http_response.c  http_response.h  mime_type.c  mime_type.h  socket.c  socket.h  socket_addr.c  socket_addr.h  socket_buf.c  socket_buf.h  sources.mk  sources.sh  types.h  update_sources  url.c  url.h
httpd/: Makefile  configure  httpd.c  httpd.h  kc3_httpd  kc3_httpd_debug  sources.mk  sources.sh
ic3/: .ic3_history  Makefile  buf_linenoise.c  buf_linenoise.h  buf_readline.c  buf_readline.h  buf_wineditline.c  buf_wineditline.h  configure  ic3.c  linenoise.c  sources.mk  sources.sh  update_sources
ikc3/: .gdb_history  .ic3_history  .ikc3_history  Makefile  buf_linenoise.c  buf_linenoise.h  buf_wineditline.c  buf_wineditline.h  configure  ikc3.c  ikc3.diff  ikc3_kc3s.c  kc3s.c  linenoise.c  sources.mk  sources.sh  update_sources
image/: Makefile  configure  image.c  image.h  image_avir.cxx  image_avir.h  image_egl.c  image_egl.h  sources.mk  sources.sh  types.h  update_sources
img/: c3.1.xcf  c3.xcf  dmg_background.xcf  kc3.1.xcf  kc3.xcf
json/: Makefile  configure  json.c  json.h  sources.mk  sources.sh  update_sources
kc3_http/: configure  http.c  socket.c  socket.h  sources.mk  sources.sh  types.h
kc3c/: Makefile  c3c.c  configure  kc3c.c  sources.mk  sources.sh  update_sources
kc3s/: Makefile  buf_readline.c  buf_readline.h  configure  kc3s.c  sources.mk  sources.sh
kc3text/: kc3txt.c
kmsg/: .gdb_history  Makefile  kmsg  kmsg.gresource.xml  kmsg.kc3  run.kc3
kpkg/: Makefile  configure  kpkg.c  kpkg.kc3  sources.mk  sources.sh  update_sources
kqueue/: Makefile  configure  kqueue.c  kqueue.h  sources.mk  sources.sh
lib/: .ikc3_history  Makefile  c3.facts
libc3/: Makefile  abs.c  abs.h  alloc.c  alloc.h  arg.c  arg.h  array.c  array.h  assert.h  binding.c  binding.h  block.c  block.h  bool.c  bool.h  buf.c  buf.h  buf_file.c  buf_file.h  buf_getc.c  buf_getc.h  buf_getchar.c  buf_getchar.h  buf_inspect.c  buf_inspect.h  buf_inspect_s.c.in  buf_inspect_s.h.in  buf_inspect_s16.c  buf_inspect_s16.h  buf_inspect_s16_binary.c  buf_inspect_s16_binary.h  buf_inspect_s16_decimal.c  buf_inspect_s16_decimal.h  buf_inspect_s16_hexadecimal.c  buf_inspect_s16_hexadecimal.h  buf_inspect_s16_octal.c  buf_inspect_s16_octal.h  buf_inspect_s32.c  buf_inspect_s32.h  (+343 more)
libc3_web/: Makefile  configure  ec3.c  ec3.h  sources.mk  sources.sh  types.h  update_sources
libc3_window/: Makefile  configure  sources.sh  types.h  update_sources  window.c  window.h
libffi/: ffi.h
libkc3/: .build_cc_asan  .build_cc_cov  .build_cc_debug  .build_cc_main  .build_ld_asan  .build_ld_cov  .build_ld_debug  .build_ld_main  Makefile  abs.c  abs.h  address_of.c  address_of.h  alist.c  alist.h  alloc.c  alloc.h  arg.c  arg.h  array.c  array.h  assert.h  base32.c  base32.h  base64.c  base64.h  binding.c  binding.h  block.c  block.h  bool.c  bool.h  buf.c  buf.c3  buf.h  buf_fd.c  buf_fd.h  buf_file.c  buf_file.h  buf_getc.c  (+484 more)
libkc3_window/: Makefile  configure  types.h  window.c
macos/: Makefile  configure  update_libs
markdown/: Makefile  configure  entity.c  entity.h  markdown.c  markdown.h  md4c-html.c  md4c-html.h  md4c.c  md4c.h  sources.mk  sources.sh
math/: Makefile  config.h  configure  sin.c  sin.h  sources.mk  sources.sh  update_sources
misc/: Makefile  display_min_max.c  f64.c  fact_w.c  glesv2.pc  http_request_offset  http_request_offsets.c  http_response.c  http_response_offset  limits.c  offset  offset_request  offset_request.c  sizes  (+5 more)
window/egl/android/project/app/src/main/jni/: CMakeLists.txt
(+1991 files in other folders)
